changed the url handling logic